--- a/Week 05/pre-class-05.Rmd
+++ b/Week 05/pre-class-05.Rmd
@@ -4,19 +4,12 @@
 Make sure you commit this often with meaningful messages. 
 
 
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-
-
-
-
-
-
-Standardizing a variable means subtracting the mean, and then dividing by the standard deviation. Let’s use a loop to standardize the numeric columns in the [Western Collaborative Group Study](https://clinicaltrials.gov/ct2/show/NCT00005174). This study began in 1960 with 3154 men ages 39-59, who were employed in one of 11 California based companies. They were followed until 1969 during this time, 257 of these men developed coronary heart disease (CHD). You can read this data in with the code below. You can access this dataset with the following code:
+Standardizing a variable means subtracting the mean, and then dividing by the standard deviation. Let's use a loop to standardize the numeric columns in the [Western Collaborative Group Study](https://clinicaltrials.gov/ct2/show/NCT00005174). This study began in 1960 with 3154 men ages 39-59, who were employed in one of 11 California based companies. They were followed until 1969 during this time, 257 of these men developed coronary heart disease (CHD). You can read this data in with the code below. You can access this dataset with the following code:
 
 ```{R}
 
@@ -89,8 +82,6 @@ arcus   Arcus senilis
 
 bmi     Body Mass Index
 -----------------------------------------------------------
-
-
 
 
 ### Question 1: Standardize Function
