--- a/Week 03/pre-class-03.Rmd
+++ b/Week 03/pre-class-03.Rmd
@@ -46,14 +46,23 @@ print(lowGdp97[1,1])
 3. According to the data available, what was the average life expectancy across each continent in the 1980s?
 
 ```{r}
-lifeExp80s <- group_by(gapminder, continent) %>%
-  filter(year == 1980:1989) %>%
+group_by(gapminder, continent) %>%
+  filter(year %in% c(1980:1989)) %>%
   summarise(contLifeExp <- mean(lifeExp))
 
-lifeExp80s
 ```
 
 4. What 5 countries have the highest total GDP over all years combined?
+```{r}
+glimpse(gapminder)
+
+highGDP <- group_by(gapminder, country) %>%
+  summarise(totalGDP = sum(gdpPercap)) %>%
+  arrange(desc(totalGDP))
+
+highGDP[1:5, 1]
+```
+
 5. What countries and years had life expectancies of _at least_ 80 years? _N.b. only output the columns of interest: country, life expectancy and year (in that order)._
 6. What 10 countries have the strongest correlation (in either direction) between life expectancy and per capita GDP?
 7. Which combinations of continent (besides Asia) and year have the highest average population across all countries? _N.b. your output should include all results sorted by highest average population_. With what you already know, this one may stump you. See [this Q&A](http://stackoverflow.com/q/27207963/654296) for how to `ungroup` before `arrange`ing. This also [behaves differently in more recent versions of dplyr](https://github.com/hadley/dplyr/releases/tag/v0.5.0).
