--- a/Week 03/pre-class-03.Rmd
+++ b/Week 03/pre-class-03.Rmd
@@ -91,5 +91,14 @@ group_by(gapminder, continent, year) %>%
 ```
 
 8. Which three countries have had the most consistent population estimates (i.e. lowest standard deviation) across the years of available data? 
+
+```{r}
+group_by(gapminder, country) %>%
+  summarise(sd = sd(pop)) %>%
+  arrange(sd)
+
+# Sao Tome and Principe, Iceland, Montenegro
+```
+
 9. Subset **gm** to only include observations from 1992 and store the results as **gm1992**. What kind of object is this?
 10. Which observations indicate that the population of a country has *decreased* from the previous year **and** the life expectancy has *increased* from the previous year? See [the vignette on window functions](https://cran.r-project.org/web/packages/dplyr/vignettes/window-functions.html).
