--- a/Week 04/pre-class-04.Rmd
+++ b/Week 04/pre-class-04.Rmd
@@ -59,9 +59,34 @@ survey <- data.frame(
                      "q4" = c(-30, 5, 2, 23, 4, 2),
                      "q5" = c(88, 4, -20, 2, 4, 2)
                      )
+survey
 ```
 The response to each question should be an integer between 1 and 5. Obviously, we have some bad values in the dataframe. The goal of this problem is to fix them.
 
 A. Using a loop, create a new dataframe called survey.clean where all the invalid values (those that are not integers between 1 and 5) are set to NA.
+
+```{r}
+
+survey.clean <- survey[FALSE,]
+
+for (i in 1:nrow(survey)) {
+  for (j in 1:ncol(survey)) {
+    if (j == 1) {
+      survey.clean[i,j] <- survey[i,j]
+    } else {
+          if (survey[i,j] < 1 | survey[i,j] > 5) {
+      survey.clean[i,j] <- NA
+    } else {
+      survey.clean[i,j] <- survey[i,j]
+    }
+    }
+  }
+}
+
+survey.clean
+
+
+```
+
 
 B. Now, again using a loop, add a new column to the dataframe called “invalid.answers” that indicates, for each participant, how many bad answers they gave.
