--- a/Week 06/pre-class-06.Rmd
+++ b/Week 06/pre-class-06.Rmd
@@ -12,17 +12,25 @@ knitr::opts_chunk$set(echo = TRUE)
 
 1. Read the source code for each of the following three functions, puzzle out what they do, and then brainstorm better names.
 
-```
-f1 <- function(string, prefix) {
+```{r}
+checkPrefix <- function(string, prefix) {
   substr(string, 1, nchar(prefix)) == prefix
 }
-f2 <- function(x) {
+
+checkPrefix("hippopotamous", "hip") 
+
+removeLast <- function(x) {
   if (length(x) <= 1) return(NULL)
   x[-length(x)]
 }
-f3 <- function(x, y) {
+
+removeLast(c(11, 2, 14, 9, 5))
+
+lengthYtoX <- function(x, y) {
   rep(y, length.out = length(x))
 }
+
+lengthYtoX(c(3,2), c(1,2,5,6,7))
 ```
 
 2. Compare and contrast rnorm() and MASS::mvrnorm(). How could you make them more consistent?
