--- a/Week 06/pre-class-06.Rmd
+++ b/Week 06/pre-class-06.Rmd
@@ -35,6 +35,10 @@ lengthYtoX(c(3,2), c(1,2,5,6,7))
 
 2. Compare and contrast rnorm() and MASS::mvrnorm(). How could you make them more consistent?
 
+```{r}
+# rnorm() samples from the univariate normal distribution, while mvrnorm() samples from the multivariate normal distribution. rnorm() uses the mean and standard deviation to determine the spread of the distribution, while mvrnorm() uses mu (the population mean) and the variance (which is sd^2 in the univariate case, and is referred to as sigma). I don't believe there is any logical way to make these functions more consistent, as they use the methods appropriate for each. Sigma in the case of mvrnorm() can be a matrix, and needs to be distinguished from the univariate standard deviation. It would possibly be beneficial to refer to mu in mvrnorm() as mean, as it is called in rnorm(). 
+```
+
 
 3. Use `lapply()` and an anonymous function to find the coefficient of variation (the standard deviation divided by the mean) for all columns in the mtcars dataset. 
 
