--- a/Week 06/pre-class-06.Rmd
+++ b/Week 06/pre-class-06.Rmd
@@ -42,6 +42,14 @@ lengthYtoX(c(3,2), c(1,2,5,6,7))
 
 3. Use `lapply()` and an anonymous function to find the coefficient of variation (the standard deviation divided by the mean) for all columns in the mtcars dataset. 
 
+```{r}
+library(dplyr)
+glimpse(mtcars)
+
+lapply(mtcars, function(x) (mean(x)/sd(x)))
+```
+
+
 4. Use vapply() to:
     a. Compute the standard deviation of every column in a numeric data frame.
     b. Compute the standard deviation of every numeric column in a mixed data frame. (Hint: you’ll need to use vapply() twice.)
