--- a/Week 06/pre-class-06.Rmd
+++ b/Week 06/pre-class-06.Rmd
@@ -53,3 +53,16 @@ lapply(mtcars, function(x) (mean(x)/sd(x)))
 4. Use vapply() to:
     a. Compute the standard deviation of every column in a numeric data frame.
     b. Compute the standard deviation of every numeric column in a mixed data frame. (Hint: you’ll need to use vapply() twice.)
+    
+```{r}
+library(purrr)
+
+vapply(cars, sd, numeric(1)) # the cars data frame is all numeric, output the single sd numeric result
+
+# the internal vapply applies the "is.numeric" function to every column of the iris data frame and returns T/F for whether the column is numeric
+# the external vapply applies the sd function to the values of iris that return iris[TRUE], and returns the value as a single numeric value
+vapply(iris[vapply(iris, is.numeric, logical(1))], 
+       sd,
+       numeric(1))
+```
+    
