--- a/Week 07/week-07-preclass.Rmd
+++ b/Week 07/week-07-preclass.Rmd
@@ -34,7 +34,7 @@ With this project we will simulate a famous probability problem. This will not r
     
 ```{r}
 
-play <- function(maxNumberOfBets, betValue, bankroll) {
+playBank <- function(maxNumberOfBets, betValue, bankroll) {
   for (i in 1:maxNumberOfBets) {
     if (bankroll >= betValue) {
       betCount <- betCount + 1
@@ -50,17 +50,25 @@ play <- function(maxNumberOfBets, betValue, bankroll) {
   return(bankroll)
 }
 
-busted <- replicate(5000, (play(100,100,1000)==0))
-bustedProb <- (sum(busted) / 5000)
-
+bustedProb <- (sum(replicate(5000, (playBank(100,100,1000)==0))) / 5000)
 print(bustedProb)
 ```
 
+b. the probability that you have busted by the time you have placed your five hundredth bet by simulating the outcome directly. 
     
-    b. the probability that you have busted by the time you have placed your five hundredth bet by simulating the outcome directly. 
-    c. the mean time you go bust, given that you go bust within the first 5000 hands.
-    d. the mean and variance of your bankroll after 100 hands (including busts).
-    e. the mean and variance of your bankroll after 500 hands (including busts).
+```{r}
+bustedProb2 <- (sum(replicate(5000, (playBank(500, 100, 1000)==0))) / 5000)
+print(bustedProb2)
+```
+
+c. the mean time you go bust, given that you go bust within the first 5000 hands.
+```{r}
+
+```
+
+
+d. the mean and variance of your bankroll after 100 hands (including busts).
+e. the mean and variance of your bankroll after 500 hands (including busts).
  
 Note: you *must* stop playing if your player has gone bust. How will you handle this in the `for` loop?
 
