--- a/Week 07/week-07-preclass.Rmd
+++ b/Week 07/week-07-preclass.Rmd
@@ -35,6 +35,7 @@ With this project we will simulate a famous probability problem. This will not r
 ```{r}
 
 playBank <- function(maxNumberOfBets, betValue, bankroll) {
+  betCount <- 0
   for (i in 1:maxNumberOfBets) {
     if (bankroll >= betValue) {
       betCount <- betCount + 1
@@ -57,13 +58,34 @@ print(bustedProb)
 b. the probability that you have busted by the time you have placed your five hundredth bet by simulating the outcome directly. 
     
 ```{r}
+
 bustedProb2 <- (sum(replicate(5000, (playBank(500, 100, 1000)==0))) / 5000)
 print(bustedProb2)
+
 ```
 
 c. the mean time you go bust, given that you go bust within the first 5000 hands.
 ```{r}
 
+playCount <- function(maxNumberOfBets, betValue, bankroll) {
+  betCount <- 0 
+  for (i in 1:maxNumberOfBets) {
+    if (bankroll >= betValue) {
+      betCount <- betCount + 1
+      if (rbinom(1, 1, 0.5) == 1) {
+        bankroll <- bankroll + betValue
+      } else {
+        bankroll <- bankroll - betValue
+      }
+    } else {
+      break
+    }
+  }
+  return(betCount)
+}
+
+betCounts <- 
+replicate(5000, (playCount(100, 100, 1000) < 100))
 ```
 
 
