--- a/Week 07/week-07-preclass.Rmd
+++ b/Week 07/week-07-preclass.Rmd
@@ -84,15 +84,18 @@ playCount <- function(maxNumberOfBets, betValue, bankroll) {
   return(betCount)
 }
 
-bustCount <- replicate(5000, playCount(100, 100, 1000))
-bustNums <- vector(length = 0)
-for (i in 1:length(bustCount)) {
-  if (bustCount[i] < 100) {
-    bustNums <- c(bustNums, bustCount[i])
+bustMean <- function(numberofHands) {
+  bustNums <- vector(length = 0)
+  bustCount <- replicate(numberofHands, playCount(100, 100, 1000))
+  for (i in 1:length(bustCount)) {
+    if (bustCount[i] < 100) {
+      bustNums <- c(bustNums, bustCount[i])
+    }
   }
+  return(mean(bustNums))
 }
 
-mean(bustNums)
+bustMean(5000)
 ```
 
 
