removed an unnecessary argument from bankrollTotals function input

--- a/Week 07/week-07-preclass.Rmd
+++ b/Week 07/week-07-preclass.Rmd
@@ -98,7 +98,7 @@ d. the mean and variance of your bankroll after 100 hands (including busts).
 ```{r}
 
 bankrollMeanVar <- function(numberOfHands) {
-  bankrollTotals <- replicate(numberOfHands, play(100, 100, 1000, output="bankroll"))
+  bankrollTotals <- replicate(numberOfHands, play(100, 100, 1000))
   bankrollMean <- mean(bankrollTotals)
   bankrollVar <- var(bankrollTotals)
   print(paste("The bankroll mean after", numberOfHands, "hands is: $", bankrollMean))
