--- a/Week 09/week-09-preclass.Rmd
+++ b/Week 09/week-09-preclass.Rmd
@@ -21,12 +21,60 @@ options(scipen = 3, digits = 3)
 ## Exercises
 
 1. Read the HTML content of the following URL with a variable called webpage: https://money.cnn.com/data/us_markets/ At this point, it will also be useful to open this web page in your browser.
+
+```{r}
+library(rvest)
+site_url <- "https://money.cnn.com/data/us_markets/"
+webpage <- read_html(site_url)
+```
+
 2. Get the session details (status, type, size) of the above mentioned URL.
+
+```{r}
+
+str(webpage)
+
+```
+
 3. Extract all of the sector names from the “Stock Sectors” table (bottom left of the web page.)
+
+```{r}
+stock_sectors <- html_text(html_nodes(webpage, "#wsod_sectorPerformance .wsod_firstCol"))
+
+stock_sectors
+```
+
 4. Extract all of the “3 Month % Change” values from the “Stock Sectors” table.
+
+```{r}
+three_change <- html_text(html_nodes(webpage, "#wsod_sectorPerformance td.wsod_aRight"))
+
+three_change
+```
+
 5. Extract the table “What’s Moving” (top middle of the web page) into a data-frame.
+
+```{r}
+what_moving <- html_table(html_nodes(webpage, "table")[1])
+what_moving 
+```
+
 6. Re-construct all of the links from the first column of the “What’s Moving” table.
 Hint: the base URL is “https://money.cnn.com”
+
+```{r}
+
+what_moving_nodes <- html_nodes(webpage, ".wsod_firstCol")[1:10]
+what_moving_link_frag <- html_nodes(table1_nodes, "a") %>% 
+  html_attr("href")
+
+base_url <- "https://money.cnn.com"
+
+what_moving_full_links <- paste(base_url, what_moving_link_frag, sep='')
+what_moving_full_links 
+
+```
+
 7. Extract the titles under the “Latest News” section (bottom middle of the web page.)
 8. To understand the structure of the data in a web page, it is often useful to know what the underlying attributes are of the text you see.
 Extract the attributes (and their values) of the HTML element that holds the timestamp underneath the “What’s Moving” table.
