--- a/Week 09/week-09-preclass.Rmd
+++ b/Week 09/week-09-preclass.Rmd
@@ -76,8 +76,19 @@ what_moving_full_links
 ```
 
 7. Extract the titles under the “Latest News” section (bottom middle of the web page.)
+
+```{r}
+
+latest_news <- html_text(html_nodes(webpage, "#section_latestnews li"))
+```
+
 8. To understand the structure of the data in a web page, it is often useful to know what the underlying attributes are of the text you see.
 Extract the attributes (and their values) of the HTML element that holds the timestamp underneath the “What’s Moving” table.
+
+```{r}
+
+```
+
 9. Extract the values of the blue percentage-bars from the “Trending Tickers” table (bottom right of the web page.)
 Hint: in this case, the values are stored under the “class” attribute.
 10. Get the links of all of the “svg” images on the web page.
